# AdHoc4J

./: .gitignore  build.gradle  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
main/compile/com/alesharik/adhoc/: AdHocInterface.c  AdHocInterface.cpp  AdHocManager.c  AdHocManager.cpp  AdHocManager.h  AdHocNetwork.c  AdHocNetwork.cpp  CMakeLists.txt  Utils.c  Utils.cpp  Utils.h  com_alesharik_adhoc_AdHocInterface.h  com_alesharik_adhoc_AdHocInterface_Sink.h  com_alesharik_adhoc_AdHocManager.h  com_alesharik_adhoc_AdHocManager_Sink.h  com_alesharik_adhoc_AdHocNetwork.h  com_alesharik_adhoc_AdHocNetwork_SignalQuality.h  com_alesharik_adhoc_AdHocNetwork_Sink.h
main/src/com/alesharik/adhoc/: AdHocInterface.java  AdHocManager.java  AdHocNetwork.java  ConnectionFailedReason.java  ConnectionStatus.java  Guid.java  HResult.java
main/src/com/alesharik/adhoc/security/: AuthAlgorithm.java  CipherAlgorithm.java  SecuritySettings.java  SecuritySettingsBuilder.java
test/src/com/alesharik/adhoc/: ConnectionFailedReasonTest.java  ConnectionStatusTest.java  GuidTest.java
test/src/com/alesharik/adhoc/security/: AuthAlgorithmTest.java  CipherAlgorithmTest.java
