cmake_minimum_required(VERSION 3.7.2)
if (WIN32)
    set(CMAKE_C_COMPILER "C:/MinGW/bin/gcc.exe")
    set(CMAKE_CXX_COMPILER "C:/MinGW/bin/g++.exe")
endif ()
set(LANGUAGE CXX)
project(adhoc4j)

find_package(JNI REQUIRED)
include_directories(${JNI_INCLUDE_DIRS})

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES Utils.c AdHocManager.c AdHocInterface.c AdHocNetwork.c)

add_library(adhoc4j SHARED ${SOURCE_FILES})
#include_directories($ENV{JAVA_HOME}/include)
include_directories(.)
if (WIN32)
#    include_directories($ENV{JAVA_HOME}/include/win32)
endif ()
if (UNIX)
    include_directories(include)
#    include_directories($ENV{JAVA_HOME}/include/linux)
    target_include_directories(adhoc4j PRIVATE include)
endif ()
target_link_libraries(adhoc4j)
